--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,7 +1,6 @@
 .Nav {
-  background: #ECE9E6;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background:var(--primary);
+  color:var(--primary-light);
   box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
   position: sticky;
   top: 0;
